#############################################################################
BETA PUBLIC RELEASE VERSION 1.1.3       XX-XX-XX
#############################################################################
  - BUG FIXES 
    * Fixed charge assignment error when dealing with LYN in AMBER.

#############################################################################
BETA PUBLIC RELEASE VERSION 1.1.2       6-23-06
#############################################################################
  - BUG FIXES 
    * Fixed a bug in the hydrogen bonding routines where PDB2PQR attempted to 
      delete an atom that had already been deleted. (thanks to Rachel Burdge)
    * Fixed a bug in chain detection routines where PDB2PQR was unable to
      detect multiple chains inside a single unnamed chain (thanks to 
      Rachel Burdge)
    * Fixed a second bug in chain detection routines where HETATM residues
      with names ending in "3" were improperly chosen for termini (thanks to
      Reut Abramovich)
    * Fixed a bug where chains were improperly detected when only containing
      one HETATM residue (thanks to Reut Abramovich)
#############################################################################
BETA PUBLIC RELEASE VERSION 1.1.1       5-3-06
#############################################################################
  - BUG FIXES 
    * Fixed a bug which prevented PDB2PQR from recognizing atoms from nucleic 
      acids with "*" in their atom names. (thanks to Jaichen Wang)
    * Fixed a bug in the hydrogen bonding routines where a misnamed object
      led to a crash for very specific cases. (thanks to Josh Swamidass) 
#############################################################################
BETA PUBLIC RELEASE VERSION 1.1.0       4-12-06
#############################################################################
  - NEW FEATURES
    * Structural data files have been moved to XML format.  This should make 