@@ -3,7 +3,8 @@ BETA PUBLIC RELEASE VERSION 1.1.3       XX-XX-XX
 #############################################################################
   - BUG FIXES 
     * Fixed charge assignment error when dealing with LYN in AMBER.
-
+    * Fixed crash when a chain has a single amino acid residue.  The code
+      now reports the offending chain and residue before exiting.
 #############################################################################
 BETA PUBLIC RELEASE VERSION 1.1.2       6-23-06
 #############################################################################
